# wasm_nn

./: .gitignore  Cargo.toml  README.md  build.bat  index.html  run.bat  wasm_nn.html  wasm_nn.js
.github/workflows/: actions.yml
js/: wasm_nn.js
src/: data.rs  lib.rs  nn.rs
wasm/: wasm_nn.wasm
