[package]
name = "wasm_nn"
version = "0.1.0"
authors = ["Donough Liu <ldm2993593805@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.13.1"
ndarray-rand = "0.11.0"
rand = "0.7.3"
rand_core = "0.5.1"
once_cell = "1.4.0"
#console_error_panic_hook = "0.1.6" but it seems to use the wasm_bindgen which is not good as this is a minimal dependency project